@@ -1,5 +1,6 @@
 Version Next
 
+    - Add support for creating automatic backups to PersistentObject
     - Put back UpdatingDataSource which got accidentally lost in r205
     - Fixed bug in SQLSchemaUpdater detecting initialized database
     - Added HardLink class
